Fix small gaps in nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ footer section {
     padding: 0.5em 1em;
     text-decoration: none;
     text-transform: uppercase;
-    margin: auto -2px;
+    margin: auto -3px;
 }
 
 .nav-image {
